syntax = "proto3";

package model;

import "enumx/csv_enumx.proto";
import "enumx/enumx.proto";
import "msg/msg.proto";
import "msg/map_msg.proto";
import "msg/battle_msg.proto";
import "optx/optx.proto";
import "third/github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "verse/backend/model";
option (gogoproto.goproto_getters_all) = false;

// 村庄/城堡
message MapBuilding {
  uint32                    buildingID   = 1;
  enumx.MapBuildingType     buildingType = 2;
  msg.RecoverData           hpData       = 3;  // village 城墙值

  // 具体的建筑信息
  MainBase                  mainBase     = 10;
  Village                   village      = 11;  // 村庄
  msg.WallData              wallData     = 12;  // 主基地城墙数据

  repeated msg.EmojiMessage emojiList    = 15; // 表情
}

// 玩家主基地
message MainBase {
  msg.BaseShield BaseShield = 1 [(gogoproto.nullable) = false]; // 主基地保护罩数据
}

// 村庄，也即gvg点
message Village {
  uint32           guildID        = 1;  // 占领的公会ID
  uint32           occupyTime     = 2;  // 占领时间
  uint32           giveUpTime     = 3;  // 放弃时间， 0表示未放弃, > 0 表示放弃中
  uint32           openTime       = 4;  // 开放时间, 如果是 > now, 则表示未开放
  uint32           protectEndTime = 5;  // 保护结束时间, 占领后开始保护30分钟

  bool             isEverOccupied = 6;  // 是否被占领过, 首战有单独的奖励
  enumx.GvGState   gvgState       = 8;  // GvG状态

  // gvg 轮次信息, 可能在预宣战阶段就存在
  uint32           lastRoundSeq   = 9;  // 上一轮次序号, 0表示没有上一轮
  msg.GvGRoundInfo roundInfo      = 10; // 开战后两小时内的信息, 战斗结束后清空
  repeated uint32  defenderUids   = 11; // 参与驻防的协防玩家uid
}
//
//message MoveAttackParam {
//  uint64 targetObjID = 1; // 目标对象ID
//}
//
//message GarrisonParam {
//  int64 startTs = 2; // 开始时间
//}
//message CollectParam {
//  double collectSpeed = 1; // 开始时间
//}
//message AttackParam {
//  bool                 isMonster   = 1; // 是否是野怪
//  enumx.MapMonsterType monsterType = 2; // 野怪类型
//}
//
//message SvrInstructionData {
//  enumx.ArmyCmdType type        = 1; // 指令类型
//  uint64            targetObjID = 2; // 目标对象ID
//  msg.IntPos        targetPos   = 3[(gogoproto.nullable) = false]; // 目标位置
//  oneof Param {
//    GarrisonParam     garrison    = 12; // 驻防参数
//    CollectParam      collect     = 13; // 采集参数
//    AttackParam       attack      = 14; // 攻击额外参数
//    msg.AssemblyKey   assembly    = 15; // 集结参数
//  }
//}

message ArmyLegionTroop {
  uint64 cardId    = 1; // 兵卡ID
  uint64 troopSize = 2; // 部队兵力
}

message ArmyBattleResult {
  uint64                   battleSeq    = 1; // 战斗序列号
  int64                    recordId     = 2; // 战斗记录ID
  repeated ArmyLegionTroop legionTroops = 3; // 部队兵力列表
  bool                     isAtkWin     = 4; // 是否攻击方胜利
}

// 地图上的军队, 野怪将来也可能使用
message Army {
  uint32                                armyID          = 1; // 部队ID
  double                                originalSpeed   = 2; // 原始速度
  double                                currentSpeed    = 3; // 当前速度
  enumx.ArmySubType                     armySubType     = 4; //  部队子类型
  enumx.ArmyStatus                      armyStatus      = 5; // 军队状态
  repeated msg.MapArmyDisplayLegionInfo legionInfoList  = 6[(gogoproto.nullable) = false]; // 部队显示信息列表
  msg.SvrInstructionData                instructionData = 7; // 指令数据
  msg.ArmyBattle                        armyBattle      = 8; // 战斗数据
  repeated ArmyBattleResult             battleResults   = 9; // 战斗结果列表（待结算的战斗结果）
  uint64                                garrisonedObjID = 10; // 被驻防的对象ID
  bool                                  isAssembly      = 11; // 是否是集结部队
  msg.SMarchLineup                      lineup          = 12; // 编队阵容
  // repeated msg.CardReserve              cardReserves    = 12; // 兵卡预备役信息
  msg.CollectData                       collectData     = 14; // 采集数据
  repeated msg.EmojiMessage             emojiList       = 15; // 表情
  msg.ClientArmyShow                    armyShow        = 16; // 部队展示信息
  msg.ArmyAssembly                      assemblyInfo    = 17; // 集结信息
  uint32                                costStrength    = 18; // 消耗的体力 (用于后续返回)
  bool                                  isSweep         = 19; // 是否为扫荡部队
  uint32                                victoryCount    = 20; // 胜利次数
  uint64                                mask            = 21; // 部队掩码（对应ArmyMask定义）
  uint64                                targetObjID     = 22; // 目标对象ID
}

// 中立建筑和野怪
message Monster {
  uint64               objID         = 1; // 仅用于反向索引
  uint32               cfgId         = 2; // 配置ID
  repeated string      attackerInfos = 3; // 进攻者信息，格式[WorldID:MapID:UID:ArmyID]
  enumx.MapMonsterType monsterType   = 4; // 怪物类型

  CityBoss             cityBoss      = 10; // 世界BOSS
  uint64               radarTaskID   = 11; // 雷达任务ID
  msg.GuildBossMapExt  guildBoss     = 12; // 联盟BOSS额外信息
  uint32               scheduleID    = 13; // 关联的活动ID
}

message CityBoss {
  enumx.CityBossType bossType = 1; // 世界BOSS类型
}

// 地图非战斗单位, 部分基础信息通过MapObject获取
message WildItem {
  uint64             objID         = 1;  // 仅用于反向索引
  enumx.WildItemType wildItemType  = 2; // 野物类型
  uint32             cfgId         = 3; // 配置ID

  msg.MapMine        mine          = 7;  // 普通采矿点
  msg.GuildMine      guildMine     = 8;  // 联盟采矿点
  msg.MapRewardItem  rewardItem    = 9;  // 地图奖励物品
  uint64             radarTaskID   = 10; // 雷达任务ID
  msg.RadarTreasure  radarTreasure = 11; // 雷达宝藏数据
}

// map object
message MapObject {
  option (optx.structuralVersion)    = 0;
  uint64                 objID         = 1 [(optx.primaryKeyPriority) = 2];
  uint32                 mapID         = 2 [(optx.primaryKeyPriority) = 1];
  uint32                 ownerID       = 3;  // 所有者ID
  int64                  createTime    = 4;  // 创建时间
  enumx.ObjType          objType       = 5;  // 物体类型
  msg.IntPos             pos           = 6 [(gogoproto.nullable) = false];  // 六边形格子坐标(整数坐标)
  msg.Float64Pos         float64Pos    = 7 [(gogoproto.nullable) = false];  // 浮点坐标，移动时使用
  enumx.ObjRefreshType   refreshType   = 8; // 刷新来源的方式
  enumx.MapObjDetailType objDetailType = 9; // obj 具体类型

  // 实际对象细节信息
  // todo_hz这里是不是应该用oneof的
  MapBuilding            building      = 20;
  Army                   army          = 21;
  Monster                monster       = 22;
  WildItem               wildItem      = 23;
  msg.MoveInfo           moveInfo      = 24;  // 移动信息
  msg.TruckData          truckData     = 25;  // 卡车数据
  msg.BattleInfo         battleInfo    = 26;  // 战斗信息
  msg.HuntTroopTask      huntTroopTask = 27;  // 狩猎小队数据
  msg.AssemblyInfo       assemblyInfo  = 28; // 集结信息
  msg.RadarTaskData      radarTaskData = 29; // 雷达任务数据

  uint32                 AmendVersion  = 30;
  int64                  ExpiredTime   = 31; // 过期时间, 0表示不过期
}

// 服务器导量信息
message SvrEnterInfo {
  option (optx.structuralVersion) = 0;
  uint32 worldID      = 1 [(optx.primaryKeyPriority) = 1]; // 服务器ID
  uint32 cityID       = 3;  // 城市配置ID
  uint64 createTime   = 4;  // 创建时间
  uint64 openTime     = 5;  // 真正开始导量时间, 一般提前至少2分钟
  uint64 endTime      = 6;  // 结束时间
  int32  status       = 7;  // 状态, 0:未开始, 1:进行中, 2:已结束

  uint32 AmendVersion = 20;  // 数据版本号
}


// 每个地图一个的db信息
message CityMapInfo {
  option (optx.structuralVersion) = 0;
  uint32        worldID      = 1;  // 世界ID
  uint32        mapID        = 2 [(optx.primaryKeyPriority) = 1];
  uint32        cityID       = 3;  // 城市配置ID
  enumx.MapType mapType      = 5;  // 普通城市、副本、活动地图等
  int64         startTime    = 6;  // 开始时间

  uint32        AmendVersion = 20;  // 地图版本号
}

// 区域刷新数据（区域内某类型【怪/矿等】刷新数据）
message AreaRespawnData {
  option (optx.structuralVersion)     = 0;
  uint32                 areaId       = 1 [(optx.primaryKeyPriority) = 2]; // 区域id
  uint32                 respawnType  = 2 [(optx.primaryKeyPriority) = 3]; // 刷新类型
  uint32                 mapID        = 4 [(optx.primaryKeyPriority) = 1]; // 地图ID
  map<uint64, MapObject> mapObjects   = 5; // 刷新区域内的所有物体
  uint32                 AmendVersion = 6;  // 版本号
}

message MapObjectWithExtra {
  MapObject obj            = 1; // 地图物体
  uint32    areaId         = 2; // 区域ID
  uint32    posIndex       = 3; // 所在地图位置索引
  bool      createBySearch = 4; // 是否是通过搜索创建的
}