syntax = "proto3";

package chatee.svr.mcp;

option go_package = "chatee-go/proto/svr/mcp";

// =============================================================================
// MCP Service - Model Context Protocol Implementation
// =============================================================================

service MCPService {
    // Server Management
    rpc ListServers(ListServersRequest) returns (ListServersResponse);
    rpc GetServer(GetServerRequest) returns (MCPServer);
    rpc CreateServer(CreateServerRequest) returns (MCPServer);
    rpc UpdateServer(UpdateServerRequest) returns (MCPServer);
    rpc DeleteServer(DeleteServerRequest) returns (DeleteServerResponse);
    
    // MCP Protocol Operations
    rpc Initialize(InitializeRequest) returns (InitializeResponse);
    rpc ListTools(ListToolsRequest) returns (ListToolsResponse);
    rpc CallTool(CallToolRequest) returns (CallToolResponse);
    rpc CallToolStream(CallToolRequest) returns (stream ToolStreamEvent);
    
    // Resource Operations (optional MCP feature)
    rpc ListResources(ListResourcesRequest) returns (ListResourcesResponse);
    rpc ReadResource(ReadResourceRequest) returns (ReadResourceResponse);
    
    // Health and Status
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
    rpc GetConnectionStatus(GetConnectionStatusRequest) returns (ConnectionStatus);
    
    // OAuth
    rpc GetAuthorizationURL(GetAuthURLRequest) returns (GetAuthURLResponse);
    rpc ExchangeToken(ExchangeTokenRequest) returns (ExchangeTokenResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    
    // Market
    rpc ListMarketServers(ListMarketRequest) returns (ListMarketResponse);
    rpc InstallMarketServer(InstallMarketRequest) returns (MCPServer);
}

// =============================================================================
// MCP Server Configuration
// =============================================================================

message MCPServer {
    string server_id = 1;
    string name = 2;
    string description = 3;
    string url = 4;
    TransportType transport = 5;
    AuthType auth_type = 6;
    bool enabled = 7;
    ServerSettings settings = 8;
    ServerStatus status = 9;
    int64 created_at = 10;
    int64 updated_at = 11;
}

message ServerSettings {
    int32 timeout_ms = 1;
    int32 max_retries = 2;
    bool use_proxy = 3;
    string proxy_url = 4;
    OAuthSettings oauth = 5;
    map<string, string> headers = 6;
    map<string, string> extra = 7;
}

message OAuthSettings {
    string client_id = 1;
    string client_secret = 2;
    string authorization_url = 3;
    string token_url = 4;
    repeated string scopes = 5;
    string redirect_uri = 6;
}

message ServerStatus {
    bool connected = 1;
    string protocol_version = 2;
    string session_id = 3;
    int64 last_health_check = 4;
    int32 tool_count = 5;
    string error = 6;
}

enum TransportType {
    TRANSPORT_UNSPECIFIED = 0;
    TRANSPORT_HTTP = 1;
    TRANSPORT_SSE = 2;
    TRANSPORT_STDIO = 3;
    TRANSPORT_WEBSOCKET = 4;
}

enum AuthType {
    AUTH_NONE = 0;
    AUTH_BEARER = 1;
    AUTH_OAUTH = 2;
    AUTH_API_KEY = 3;
}

// =============================================================================
// Server CRUD
// =============================================================================

message ListServersRequest {
    bool enabled_only = 1;
    string user_id = 2;
}

message ListServersResponse {
    repeated MCPServer servers = 1;
}

message GetServerRequest {
    string server_id = 1;
}

message CreateServerRequest {
    string name = 1;
    string description = 2;
    string url = 3;
    TransportType transport = 4;
    AuthType auth_type = 5;
    ServerSettings settings = 6;
    string user_id = 7;
}

message UpdateServerRequest {
    string server_id = 1;
    string name = 2;
    string description = 3;
    string url = 4;
    TransportType transport = 5;
    AuthType auth_type = 6;
    ServerSettings settings = 7;
    bool enabled = 8;
}

message DeleteServerRequest {
    string server_id = 1;
}

message DeleteServerResponse {
    bool success = 1;
}

// =============================================================================
// MCP Protocol - Initialize
// =============================================================================

message InitializeRequest {
    string server_id = 1;
    ClientInfo client_info = 2;
}

message ClientInfo {
    string name = 1;
    string version = 2;
}

message InitializeResponse {
    string protocol_version = 1;
    string session_id = 2;
    ServerCapabilities capabilities = 3;
    ServerInfo server_info = 4;
}

message ServerCapabilities {
    bool tools = 1;
    bool resources = 2;
    bool prompts = 3;
    bool logging = 4;
    map<string, bool> experimental = 5;
}

message ServerInfo {
    string name = 1;
    string version = 2;
}

// =============================================================================
// MCP Protocol - Tools
// =============================================================================

message ListToolsRequest {
    string server_id = 1;
    bool force_refresh = 2;
}

message ListToolsResponse {
    repeated Tool tools = 1;
    int64 cached_at = 2;
}

message Tool {
    string name = 1;
    string description = 2;
    bytes input_schema = 3;       // JSON Schema as bytes
}

message CallToolRequest {
    string server_id = 1;
    string tool_name = 2;
    map<string, string> arguments = 3;
    bytes arguments_json = 4;     // Alternative: raw JSON
    int32 timeout_ms = 5;
}

message CallToolResponse {
    bool success = 1;
    repeated ToolContent content = 2;
    string error = 3;
    int64 duration_ms = 4;
}

message ToolContent {
    string type = 1;              // text, image, resource
    string text = 2;
    bytes data = 3;
    string mime_type = 4;
}

message ToolStreamEvent {
    oneof event {
        ToolContent content = 1;
        ToolProgress progress = 2;
        ToolError error = 3;
        ToolComplete complete = 4;
    }
}

message ToolProgress {
    float progress = 1;
    string message = 2;
}

message ToolError {
    int32 code = 1;
    string message = 2;
    bool retryable = 3;
}

message ToolComplete {
    bool success = 1;
    int64 duration_ms = 2;
}

// =============================================================================
// MCP Protocol - Resources
// =============================================================================

message ListResourcesRequest {
    string server_id = 1;
}

message ListResourcesResponse {
    repeated Resource resources = 1;
}

message Resource {
    string uri = 1;
    string name = 2;
    string description = 3;
    string mime_type = 4;
}

message ReadResourceRequest {
    string server_id = 1;
    string uri = 2;
}

message ReadResourceResponse {
    repeated ResourceContent contents = 1;
}

message ResourceContent {
    string uri = 1;
    string mime_type = 2;
    oneof content {
        string text = 3;
        bytes blob = 4;
    }
}

// =============================================================================
// Health and Status
// =============================================================================

message HealthCheckRequest {
    string server_id = 1;
}

message HealthCheckResponse {
    bool healthy = 1;
    string status = 2;
    int64 latency_ms = 3;
    string error = 4;
}

message GetConnectionStatusRequest {
    string server_id = 1;
}

message ConnectionStatus {
    string server_id = 1;
    bool connected = 2;
    string session_id = 3;
    string protocol_version = 4;
    int64 connected_at = 5;
    int64 last_activity = 6;
    int32 pending_requests = 7;
}

// =============================================================================
// OAuth
// =============================================================================

message GetAuthURLRequest {
    string server_id = 1;
    string redirect_uri = 2;
    string state = 3;
}

message GetAuthURLResponse {
    string authorization_url = 1;
    string state = 2;
    string code_verifier = 3;     // For PKCE
}

message ExchangeTokenRequest {
    string server_id = 1;
    string code = 2;
    string code_verifier = 3;
    string redirect_uri = 4;
}

message ExchangeTokenResponse {
    bool success = 1;
    string access_token = 2;
    string refresh_token = 3;
    int64 expires_at = 4;
    string error = 5;
}

message RefreshTokenRequest {
    string server_id = 1;
}

message RefreshTokenResponse {
    bool success = 1;
    string access_token = 2;
    int64 expires_at = 3;
    string error = 4;
}

// =============================================================================
// Market
// =============================================================================

message ListMarketRequest {
    string category = 1;
    string search = 2;
    int32 limit = 3;
    int32 offset = 4;
}

message ListMarketResponse {
    repeated MarketServer servers = 1;
    int32 total = 2;
}

message MarketServer {
    string market_id = 1;
    string name = 2;
    string description = 3;
    string author = 4;
    string url = 5;
    string category = 6;
    repeated string tags = 7;
    int32 install_count = 8;
    float rating = 9;
    bool verified = 10;
}

message InstallMarketRequest {
    string market_id = 1;
    string user_id = 2;
}
